[package]
name = "johncena141bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruma = { version = "0.5.0", features = ["client", "client-api-c", "client-ext-client-api",
"client-reqwest", "rand"]}
eyre = "0.6"
tokio = { version = "1.0.1", features = ["macros", "rt"] }
tokio-stream = { version = "0.1.1", default-features = false }
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls"] }
